:sparkles: Feature - add 2 inputs mode (file and mock)